--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,45 +6,47 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = { version = "0.4.31", optional = true, default-features = false, features = ["std"] }
+chrono = { version = "0.4.35", optional = true, default-features = false, features = ["std"] }
 # color-eyre = "0.6.2"
-eyre = "0.6.11"
+eyre = "0.6.12"
 # futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
 futures-util = { version = "0.3.30", optional = true, default-features = false, features = ["std"] }
-itertools = { version = "0.12.0", optional = true }
-log = { version = "0.4.20", optional = true, default-features = false, features = ["std"] }
-number_prefix = "0.4.0"
-redis = { version = "0.24.0", default-features = false, optional = true }
+itertools = { version = "0.12.1", optional = true }
+log = { version = "0.4.21", optional = true, default-features = false, features = ["std"] }
+number_prefix = { version = "0.4.0", optional = true }
+redis = { version = "0.25.2", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
-rust_decimal = { version = "1.33.1", default-features = false }
-serde = { version = "1.0.195", optional = true, default-features = false, features = ["derive", "std"] }
-serde_yaml = { version = "0.9.30", optional = true, default-features = false }
-sqlx = { version = "0.7.3", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
-sysinfo = "0.30.5"
-thiserror = { version = "1.0.56", optional = true, default-features = false }
-time = { version = "0.3.31", optional = true, default-features = false, features = ["macros", "std", "parsing"] }
-tokio = { version = "1.35.1", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
-toml = { version = "0.8.8", optional = true, default-features = false, features = ["parse"] }
+rust_decimal = { version = "1.35.0", optional = true, default-features = false }
+serde = { version = "1.0.197", optional = true, default-features = false, features = ["derive", "std"] }
+serde_yaml = { version = "0.9.34", optional = true, default-features = false }
+sqlx = { version = "0.7.4", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
+sysinfo = { version = "0.30.7", optional = true }
+thiserror = { version = "1.0.58", optional = true, default-features = false }
+time = { version = "0.3.34", optional = true, default-features = false, features = ["macros", "std", "parsing"] }
+tokio = { version = "1.36.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
+toml = { version = "0.8.12", optional = true, default-features = false, features = ["parse"] }
 tracing = { version = "0.1.40", optional = true }
 # tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
 tracing-appender = { version = "0.2.3", optional = true, default-features = false }
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
 tracing-subscriber = { version = "0.3.18", optional = true, default-features = false, features = ["tracing-log", "ansi", "time", "std"] }
-uuid = { version = "1.6.1", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
+uuid = { version = "1.8.0", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
 
 [features]
 default = ["all"]
 all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog", "hq", "redis", "utoml", "serde_extend"]
 cell = []
-mysqlx = ["yaml", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "futures-util", "itertools", "chrono"]
+mysqlx = ["yaml", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "futures-util", "itertools", "chrono", "human"]
 mysqlx_batch = ["mysqlx"]
-qh = ["mysqlx_batch", "ymdhms", "futures-util", "thiserror", "tokio"]
+qh = ["mysqlx_batch", "ymdhms", "futures-util", "thiserror", "tokio", "rust_decimal"]
 sizehmap = []
 timer = ["futures-util", "tokio"]
 ulog = ["rolling-file", "time", "tracing", "tracing-appender", "tracing-error", "tracing-subscriber"]
 yaml = ["serde", "serde_yaml", "thiserror", "log"]
 utoml = ["serde", "toml", "thiserror", "log"]
 ymdhms = ["chrono"]
-hq = ["mysqlx", "ymdhms"]
+hq = ["mysqlx", "ymdhms", "rust_decimal"]
 redis = ["dep:redis", "yaml", "serde"]
 serde_extend = ["chrono", "serde"]
+human = ["number_prefix", "rust_decimal"]
+running = ["sysinfo"]
