--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,11 @@ dirs = { version = "5.0.1", optional = true }
 eyre = { version = "0.6.12" }
 # futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
 futures-util = { version = "0.3.30", optional = true, default-features = false, features = ["std"] }
+indexmap = { version = "2.2.6", optional = true, features = ["serde"] }
 itertools = { version = "0.12.1", optional = true }
 log = { version = "0.4.21", optional = true, default-features = false, features = ["std"] }
 number_prefix = { version = "0.4.0", optional = true }
-redis = { version = "0.25.2", default-features = false, optional = true }
+redis = { version = "0.25.3", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.35.0", optional = true, default-features = false }
 serde = { version = "1.0.197", optional = true, default-features = false, features = ["derive", "std"] }
@@ -35,8 +36,9 @@ uuid = { version = "1.8.0", optional = true, default-features = false, features 
 
 [features]
 default = ["all"]
-all = ["cell", "mysqlx-batch", "qh", "sizehmap", "timer", "tracing-init", "hq", "redis", "toml", "serde-extend", "human", "running", "path-plain"]
+all = ["cell", "sql", "mysqlx-batch", "qh", "sizehmap", "timer", "tracing-init", "hq", "redis", "toml", "serde-extend", "human", "running", "path-plain"]
 cell = []
+sql = ["toml", "serde-extend", "dep:indexmap", "dep:itertools"]
 mysqlx = ["yaml", "dep:log", "dep:serde", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:uuid", "dep:futures-util", "dep:itertools", "dep:chrono", "human"]
 mysqlx-batch = ["mysqlx"]
 qh = ["mysqlx-batch", "ymdhms", "dep:futures-util", "dep:thiserror", "dep:tokio", "dep:rust_decimal"]
