--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "common-rs"
-version = "0.3.1"
+version = "0.3.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,7 +11,6 @@ chrono = { version = "0.4.37", optional = true, default-features = false, featur
 dirs = { version = "5.0.1", optional = true }
 # color-eyre = "0.6.2"
 eyre = { version = "0.6.12" }
-# futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
 futures-util = { version = "0.3.30", optional = true, default-features = false, features = ["std"] }
 indexmap = { version = "2.2.6", optional = true, features = ["serde"] }
 indicatif = { version = "0.17.8", optional = true }
@@ -25,9 +24,9 @@ rust_decimal = { version = "1.35.0", optional = true, default-features = false }
 serde = { version = "1.0.197", optional = true, default-features = false, features = ["derive", "std"] }
 serde_yaml = { version = "0.9.34", optional = true, default-features = false }
 sqlx = { version = "0.7.4", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
-sysinfo = { version = "0.30.9", optional = true }
+sysinfo = { version = "0.30.10", optional = true }
 thiserror = { version = "1.0.58", optional = true, default-features = false }
-time = { version = "0.3.35", optional = true, default-features = false, features = ["macros", "std", "parsing"] }
+time = { version = "0.3.36", optional = true, default-features = false, features = ["macros", "std", "parsing"] }
 tokio = { version = "1.37.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
 toml = { version = "0.8.12", optional = true, default-features = false, features = ["parse"] }
 tracing = { version = "0.1.40", optional = true }
@@ -35,7 +34,7 @@ tracing = { version = "0.1.40", optional = true }
 tracing-appender = { version = "0.2.3", optional = true, default-features = false }
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
 tracing-subscriber = { version = "0.3.18", optional = true, default-features = false, features = ["tracing-log", "ansi", "time", "std"] }
-uuid = { version = "1.8.0", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
+uuid = { version = "1.8.0", optional = true, default-features = false, features = ["v7", "std", "fast-rng"] }
 zip = { version = "0.6.6", optional = true, default-features = false, features = ["deflate-zlib"] }
 
 [features]
@@ -45,7 +44,7 @@ cell = []
 file = ["dep:zip"]
 sql-loader = ["toml", "serde-extend", "dep:indexmap", "dep:itertools"]
 mysqlx = ["yaml", "dep:log", "dep:serde", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:uuid", "dep:futures-util", "dep:itertools", "dep:chrono", "dep:indicatif"]
-mysqlx-batch = ["mysqlx"]
+mysqlx-batch = ["mysqlx", "dep:async-channel"]
 qh = ["mysqlx-batch", "ymdhms", "dep:futures-util", "dep:thiserror", "dep:tokio", "dep:rust_decimal"]
 sizehmap = []
 timer = ["dep:futures-util", "dep:tokio"]
@@ -60,3 +59,6 @@ human = ["dep:rust_decimal"]
 running = ["dep:sysinfo"]
 path-plain = ["dep:dirs"]
 progress-bar = ["dep:async-channel", "dep:indicatif", "dep:log", "dep:rand", "dep:tokio"]
+
+[dev-dependencies]
+tokio-stream = "0.1.15"
