--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "common-rs"
-version = "0.5.2"
+version = "0.5.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,6 +9,7 @@ edition = "2021"
 async-channel = { version = "2.2.1", optional = true }
 async-ssh2-lite = { version = "0.4.7", optional = true, features = ["tokio"] }
 chrono = { version = "0.4.38", optional = true, default-features = false, features = ["std"] }
+csv = { version = "1.3.0", default-features = false, optional = true }
 dirs = { version = "5.0.1", optional = true }
 # color-eyre = "0.6.2"
 eyre = { version = "0.6.12" }
@@ -17,8 +18,12 @@ indexmap = { version = "2.2.6", optional = true, features = ["serde"] }
 indicatif = { version = "0.17.8", optional = true }
 itertools = { version = "0.12.1", optional = true }
 log = { version = "0.4.21", optional = true, default-features = false, features = ["std"] }
+memchr = { version = "2.7.2", optional = true }
+num-traits = { version = "0.2.18", optional = true }
 number_prefix = { version = "0.4.0", optional = true }
+once_cell = { version = "1.19.0", optional = true }
 rand = { version = "0.8.5", optional = true }
+rayon = { version = "1.10.0", default-features = false, optional = true }
 redis = { version = "0.25.3", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.35.0", optional = true, default-features = false }
@@ -40,8 +45,10 @@ zip = { version = "1.1.1", optional = true, default-features = false, features =
 
 [features]
 default = ["all"]
-all = ["cell", "file", "sql-loader", "mysqlx-batch", "qh", "sizehmap", "timer", "tracing-init", "hq", "redis", "toml", "serde-extend", "human", "running", "path-plain", "progress-bar"]
+all = ["cell", "csv-zip", "file", "sql-loader", "mysqlx-batch", "qh", "sizehmap", "timer", "tracing-init", "hq", "redis", "toml", "serde-extend", "human", "running", "path-plain", "progress-bar"]
 cell = []
+csv = ["dep:csv", "dep:memchr", "dep:num-traits", "dep:once_cell", "dep:rayon"]
+csv-zip = ["csv", "dep:zip"]
 file = ["dep:zip"]
 sql-loader = ["toml", "serde-extend", "dep:indexmap", "dep:itertools"]
 mysqlx = ["yaml", "toml", "human", "ssh", "dep:log", "dep:serde", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:uuid", "dep:futures-util", "dep:itertools", "dep:chrono"]
