--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ indicatif = { version = "0.17.8", optional = true }
 itertools = { version = "0.12.1", optional = true }
 log = { version = "0.4.21", optional = true, default-features = false, features = ["std"] }
 memchr = { version = "2.7.2", optional = true }
-num-traits = { version = "0.2.18", optional = true }
+num-traits = { version = "0.2.19", optional = true }
 number_prefix = { version = "0.4.0", optional = true }
 once_cell = { version = "1.19.0", optional = true }
 rand = { version = "0.8.5", optional = true }
@@ -27,7 +27,7 @@ rayon = { version = "1.10.0", default-features = false, optional = true }
 redis = { version = "0.25.3", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.35.0", optional = true, default-features = false }
-serde = { version = "1.0.199", optional = true, default-features = false, features = ["derive", "std"] }
+serde = { version = "1.0.200", optional = true, default-features = false, features = ["derive", "std"] }
 serde_yaml = { version = "0.9.34", optional = true, default-features = false }
 sqlx = { version = "0.7.4", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
 sysinfo = { version = "0.30.11", optional = true }
@@ -41,17 +41,17 @@ tracing-appender = { version = "0.2.3", optional = true, default-features = fals
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
 tracing-subscriber = { version = "0.3.18", optional = true, default-features = false, features = ["tracing-log", "ansi", "time", "std"] }
 uuid = { version = "1.8.0", optional = true, default-features = false, features = ["v7", "std", "fast-rng"] }
-zip = { version = "1.1.2", optional = true, default-features = false, features = ["deflate-zlib"] }
+zip = { version = "1.1.3", optional = true, default-features = false, features = ["deflate-zlib"] }
 
 [features]
 default = ["all"]
-all = ["cell", "csv-zip", "file", "sql-loader", "mysqlx-batch", "qh", "sizehmap", "timer", "tracing-init", "hq", "redis", "toml", "serde-extend", "human", "running", "path-plain", "progress-bar"]
+all = ["cell", "csv-zip", "file", "sql-loader", "mysqlx-batch", "qh", "sizehmap", "timer", "tracing-init", "hq", "redis", "toml", "serde-extend", "human", "running", "path-plain", "progress-bar", "ssh"]
 cell = []
 csv = ["dep:csv", "dep:memchr", "dep:num-traits", "dep:once_cell", "dep:rayon"]
 csv-zip = ["csv", "dep:zip"]
 file = ["dep:zip"]
 sql-loader = ["toml", "serde-extend", "dep:indexmap", "dep:itertools"]
-mysqlx = ["yaml", "toml", "human", "ssh", "dep:log", "dep:serde", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:uuid", "dep:futures-util", "dep:itertools", "dep:chrono"]
+mysqlx = ["human", "ssh", "toml", "yaml", "dep:log", "dep:serde", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:uuid", "dep:futures-util", "dep:itertools", "dep:chrono"]
 mysqlx-batch = ["mysqlx"]
 qh = ["mysqlx-batch", "ymdhms", "dep:futures-util", "dep:thiserror", "dep:tokio", "dep:rust_decimal"]
 sizehmap = []
