--- a/.taplo.toml
+++ b/.taplo.toml
@@ -4,11 +4,13 @@ array_auto_expand = false
 array_auto_collapse = true
 trailing_newline = true
 reorder_keys = false
-reorder_arrays = true
+reorder_arrays = false
 
 [[rule]]
 include = ["**/Cargo.toml"]
-keys = ["*-dependencies", "*.*.dependencies", "*.dependencies", "dependencies"]
+keys = ["*-dependencies", "*.*.dependencies", "*.dependencies", "dependencies", "features"]
 
 [rule.formatting]
+array_auto_expand = false
 reorder_keys = true
+reorder_arrays = true
